internal/compiler/checker/testdata/valid/UserBadge.tue
<template>
	<span class="badge">
		{{ name }}
		<strong v-if="isAdmin">Admin</strong>
	</span>
</template>

<script lang="go">
package fixtures

import tue "github.com/norunners/tue"

type UserBadge struct {
	name     tue.Prop[string]       `prop:"name,required"`
	isAdmin  tue.Prop[bool]         `prop:"isAdmin"`
	onSelect tue.On[func(string)]
	onTags   tue.On[func(...string)]
}
</script>
